sdk/support/arm-support/samples/v3/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                         | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| --------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [chatTranscriptsGetSample.ts][chattranscriptsgetsample]                                                               | Returns chatTranscript details for a support ticket under a subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetchatTranscriptDetailsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [chatTranscriptsListSample.ts][chattranscriptslistsample]                                                             | Lists all chat transcripts for a support ticket under subscription x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListChatTranscriptsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [chatTranscriptsNoSubscriptionGetSample.ts][chattranscriptsnosubscriptiongetsample]                                   | Returns chatTranscript details for a no subscription support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetchatTranscriptDetailsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [chatTranscriptsNoSubscriptionListSample.ts][chattranscriptsnosubscriptionlistsample]                                 | Lists all chat transcripts for a support ticket x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListChatTranscriptsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [communicationsCheckNameAvailabilitySample.ts][communicationschecknameavailabilitysample]                             | Check the availability of a resource name. This API should be used to check the uniqueness of the name for adding a new communication to the support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CheckNameAvailabilityForSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [communicationsCreateSample.ts][communicationscreatesample]                                                           | Adds a new customer communication to an Azure support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [communicationsGetSample.ts][communicationsgetsample]                                                                 | Returns communication details for a support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetCommunicationDetailsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [communicationsListSample.ts][communicationslistsample]                                                               | Lists all communications (attachments not included) for a support ticket. <br/></br> You can also filter support ticket communications by _CreatedDate_ or _CommunicationType_ using the $filter parameter. The only type of communication supported today is _Web_. Output will be a paged result with _nextLink_, using which you can retrieve the next set of Communication results. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListCommunicationsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [communicationsNoSubscriptionCheckNameAvailabilitySample.ts][communicationsnosubscriptionchecknameavailabilitysample] | Check the availability of a resource name. This API should be used to check the uniqueness of the name for adding a new communication to the support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CheckNameAvailabilityForNoSubscriptionSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [communicationsNoSubscriptionCreateSample.ts][communicationsnosubscriptioncreatesample]                               | Adds a new customer communication to an Azure support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateNoSubscriptionSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [communicationsNoSubscriptionGetSample.ts][communicationsnosubscriptiongetsample]                                     | Returns communication details for a support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetCommunicationDetailsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [communicationsNoSubscriptionListSample.ts][communicationsnosubscriptionlistsample]                                   | Lists all communications (attachments not included) for a support ticket. <br/></br> You can also filter support ticket communications by _CreatedDate_ or _CommunicationType_ using the $filter parameter. The only type of communication supported today is _Web_. Output will be a paged result with _nextLink_, using which you can retrieve the next set of Communication results. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListCommunicationsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [fileWorkspacesCreateSample.ts][fileworkspacescreatesample]                                                           | Creates a new file workspace for the specified subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateFileWorkspaceForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [fileWorkspacesGetSample.ts][fileworkspacesgetsample]                                                                 | Gets details for a specific file workspace in an Azure subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetFileWorkspaceDetailsForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [fileWorkspacesNoSubscriptionCreateSample.ts][fileworkspacesnosubscriptioncreatesample]                               | Creates a new file workspace. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateFileWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [fileWorkspacesNoSubscriptionGetSample.ts][fileworkspacesnosubscriptiongetsample]                                     | Gets details for a specific file workspace. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetFileWorkspaceDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [filesCreateSample.ts][filescreatesample]                                                                             | Creates a new file under a workspace for the specified subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateFileForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [filesGetSample.ts][filesgetsample]                                                                                   | Returns details of a specific file in a work space. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetFileDetailsForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [filesListSample.ts][fileslistsample]                                                                                 | Lists all the Files information under a workspace for an Azure subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListFilesForSubscriptionUnderFileWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [filesNoSubscriptionCreateSample.ts][filesnosubscriptioncreatesample]                                                 | Creates a new file under a workspace. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateFile.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [filesNoSubscriptionGetSample.ts][filesnosubscriptiongetsample]                                                       | Returns details of a specific file in a work space. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetFileDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [filesNoSubscriptionListSample.ts][filesnosubscriptionlistsample]                                                     | Lists all the Files information under a workspace for an Azure subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListFilesUnderFileWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [filesNoSubscriptionUploadSample.ts][filesnosubscriptionuploadsample]                                                 | This API allows you to upload content to a file x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/UploadFile.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [filesUploadSample.ts][filesuploadsample]                                                                             | This API allows you to upload content to a file x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/UploadFileForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [operationsListSample.ts][operationslistsample]                                                                       | This lists all the available Microsoft Support REST API operations. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListOperations.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [problemClassificationsGetSample.ts][problemclassificationsgetsample]                                                 | Get problem classification details for a specific Azure service. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetProblemClassification.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [problemClassificationsListSample.ts][problemclassificationslistsample]                                               | Lists all the problem classifications (categories) available for a specific Azure service. Always use the service and problem classifications obtained programmatically. This practice ensures that you always have the most recent set of service and problem classification Ids. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListProblemClassifications.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [servicesGetSample.ts][servicesgetsample]                                                                             | Gets a specific Azure service for support ticket creation. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetService.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [servicesListSample.ts][serviceslistsample]                                                                           | Lists all the Azure services available for support ticket creation. For **Technical** issues, select the Service Id that maps to the Azure service/product as displayed in the **Services** drop-down list on the Azure portal's [New support request](https://portal.azure.com/#blade/Microsoft_Azure_Support/HelpAndSupportBlade/overview) page. Always use the service and its corresponding problem classification(s) obtained programmatically for support ticket creation. This practice ensures that you always have the most recent set of service and problem classification Ids. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListServices.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [supportTicketsCheckNameAvailabilitySample.ts][supportticketschecknameavailabilitysample]                             | Check the availability of a resource name. This API should be used to check the uniqueness of the name for support ticket creation for the selected subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CheckNameAvailabilityWithSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [supportTicketsCreateSample.ts][supportticketscreatesample]                                                           | Creates a new support ticket for Subscription and Service limits (Quota), Technical, Billing, and Subscription Management issues for the specified subscription. Learn the [prerequisites](https://aka.ms/supportAPI) required to create a support ticket.<br/><br/>Always call the Services and ProblemClassifications API to get the most recent set of services and problem categories required for support ticket creation.<br/><br/>Adding attachments is not currently supported via the API. To add a file to an existing support ticket, visit the [Manage support ticket](https://portal.azure.com/#blade/Microsoft_Azure_Support/HelpAndSupportBlade/managesupportrequest) page in the Azure portal, select the support ticket, and use the file upload control to add a new file.<br/><br/>Providing consent to share diagnostic information with Azure support is currently not supported via the API. The Azure support engineer working on your ticket will reach out to you for consent if your issue requires gathering diagnostic information from your Azure resources.<br/><br/>**Creating a support ticket for on-behalf-of**: Include _x-ms-authorization-auxiliary_ header to provide an auxiliary token as per [documentation](https://learn.microsoft.com/azure/azure-resource-manager/management/authenticate-multi-tenant). The primary token will be from the tenant for whom a support ticket is being raised against the subscription, i.e. Cloud solution provider (CSP) customer tenant. The auxiliary token will be from the Cloud solution provider (CSP) partner tenant. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateBillingSupportTicketForSubscription.json |
| [supportTicketsGetSample.ts][supportticketsgetsample]                                                                 | Get ticket details for an Azure subscription. Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetSubscriptionSupportTicketDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [supportTicketsListSample.ts][supportticketslistsample]                                                               | Lists all the support tickets for an Azure subscription. You can also filter the support tickets by _Status_, _CreatedDate_, _ServiceId_, and _ProblemClassificationId_ using the $filter parameter. Output will be a paged result with _nextLink_, using which you can retrieve the next set of support tickets. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListSupportTicketsCreatedOnOrAfterAndInOpenStateBySubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [supportTicketsNoSubscriptionCheckNameAvailabilitySample.ts][supportticketsnosubscriptionchecknameavailabilitysample] | Check the availability of a resource name. This API should be used to check the uniqueness of the name for support ticket creation for the selected subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CheckNameAvailability.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [supportTicketsNoSubscriptionCreateSample.ts][supportticketsnosubscriptioncreatesample]                               | Creates a new support ticket for Billing, and Subscription Management issues. Learn the [prerequisites](https://aka.ms/supportAPI) required to create a support ticket.<br/><br/>Always call the Services and ProblemClassifications API to get the most recent set of services and problem categories required for support ticket creation.<br/><br/>Adding attachments is not currently supported via the API. To add a file to an existing support ticket, visit the [Manage support ticket](https://portal.azure.com/#blade/Microsoft_Azure_Support/HelpAndSupportBlade/managesupportrequest) page in the Azure portal, select the support ticket, and use the file upload control to add a new file.<br/><br/>Providing consent to share diagnostic information with Azure support is currently not supported via the API. The Azure support engineer working on your ticket will reach out to you for consent if your issue requires gathering diagnostic information from your Azure resources.<br/><br/> x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateBillingSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [supportTicketsNoSubscriptionGetSample.ts][supportticketsnosubscriptiongetsample]                                     | Gets details for a specific support ticket. Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetSupportTicketDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [supportTicketsNoSubscriptionListSample.ts][supportticketsnosubscriptionlistsample]                                   | Lists all the support tickets. <br/><br/>You can also filter the support tickets by <i>Status</i>, <i>CreatedDate</i>, , <i>ServiceId</i>, and <i>ProblemClassificationId</i> using the $filter parameter. Output will be a paged result with <i>nextLink</i>, using which you can retrieve the next set of support tickets. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListSupportTickets.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [supportTicketsNoSubscriptionUpdateSample.ts][supportticketsnosubscriptionupdatesample]                               | This API allows you to update the severity level, ticket status, and your contact information in the support ticket.<br/><br/>Note: The severity levels cannot be changed if a support ticket is actively being worked upon by an Azure support engineer. In such a case, contact your support engineer to request severity update by adding a new communication using the Communications API. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/UpdateAdvancedDiagnosticConsentOfSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [supportTicketsUpdateSample.ts][supportticketsupdatesample]                                                           | This API allows you to update the severity level, ticket status, advanced diagnostic consent and your contact information in the support ticket.<br/><br/>Note: The severity levels cannot be changed if a support ticket is actively being worked upon by an Azure support engineer. In such a case, contact your support engineer to request severity update by adding a new communication using the Communications API. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/UpdateAdvancedDiagnosticConsentOfSupportTicketForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/chatTranscriptsGetSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env SUPPORT_SUBSCRIPTION_ID="<support subscription id>" node dist/chatTranscriptsGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[chattranscriptsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/chatTranscriptsGetSample.ts
[chattranscriptslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/chatTranscriptsListSample.ts
[chattranscriptsnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/chatTranscriptsNoSubscriptionGetSample.ts
[chattranscriptsnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/chatTranscriptsNoSubscriptionListSample.ts
[communicationschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/communicationsCheckNameAvailabilitySample.ts
[communicationscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/communicationsCreateSample.ts
[communicationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/communicationsGetSample.ts
[communicationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/communicationsListSample.ts
[communicationsnosubscriptionchecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/communicationsNoSubscriptionCheckNameAvailabilitySample.ts
[communicationsnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/communicationsNoSubscriptionCreateSample.ts
[communicationsnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/communicationsNoSubscriptionGetSample.ts
[communicationsnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/communicationsNoSubscriptionListSample.ts
[fileworkspacescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/fileWorkspacesCreateSample.ts
[fileworkspacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/fileWorkspacesGetSample.ts
[fileworkspacesnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/fileWorkspacesNoSubscriptionCreateSample.ts
[fileworkspacesnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/fileWorkspacesNoSubscriptionGetSample.ts
[filescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/filesCreateSample.ts
[filesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/filesGetSample.ts
[fileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/filesListSample.ts
[filesnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/filesNoSubscriptionCreateSample.ts
[filesnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/filesNoSubscriptionGetSample.ts
[filesnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/filesNoSubscriptionListSample.ts
[filesnosubscriptionuploadsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/filesNoSubscriptionUploadSample.ts
[filesuploadsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/filesUploadSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/operationsListSample.ts
[problemclassificationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/problemClassificationsGetSample.ts
[problemclassificationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/problemClassificationsListSample.ts
[servicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/servicesGetSample.ts
[serviceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/servicesListSample.ts
[supportticketschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/supportTicketsCheckNameAvailabilitySample.ts
[supportticketscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/supportTicketsCreateSample.ts
[supportticketsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/supportTicketsGetSample.ts
[supportticketslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/supportTicketsListSample.ts
[supportticketsnosubscriptionchecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/supportTicketsNoSubscriptionCheckNameAvailabilitySample.ts
[supportticketsnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/supportTicketsNoSubscriptionCreateSample.ts
[supportticketsnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/supportTicketsNoSubscriptionGetSample.ts
[supportticketsnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/supportTicketsNoSubscriptionListSample.ts
[supportticketsnosubscriptionupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/supportTicketsNoSubscriptionUpdateSample.ts
[supportticketsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/typescript/src/supportTicketsUpdateSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-support?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/support/arm-support/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
