sdk/support/arm-support/samples/v4/typescript/README.md
# @azure/arm-support client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-support in some common scenarios.

| **File Name**                                                                                                         | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| --------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [chatTranscriptsGetSample.ts][chattranscriptsgetsample]                                                               | returns chatTranscript details for a support ticket under a subscription. x-ms-original-file: 2026-07-01/GetchatTranscriptDetailsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [chatTranscriptsListSample.ts][chattranscriptslistsample]                                                             | lists all chat transcripts for a support ticket under subscription x-ms-original-file: 2026-07-01/ListChatTranscriptsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [chatTranscriptsNoSubscriptionGetSample.ts][chattranscriptsnosubscriptiongetsample]                                   | returns chatTranscript details for a no subscription support ticket. x-ms-original-file: 2026-07-01/GetchatTranscriptDetailsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [chatTranscriptsNoSubscriptionListSample.ts][chattranscriptsnosubscriptionlistsample]                                 | lists all chat transcripts for a support ticket x-ms-original-file: 2026-07-01/ListChatTranscriptsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [classifyProblemsClassifyProblemsSample.ts][classifyproblemsclassifyproblemssample]                                   | classify the right problem classifications (categories) available for a specific Azure service. x-ms-original-file: 2026-07-01/ClassifyProblemClassificationsForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [classifyProblemsNoSubscriptionClassifyProblemsSample.ts][classifyproblemsnosubscriptionclassifyproblemssample]       | classify the right problem classifications (categories) available for a specific Azure service. x-ms-original-file: 2026-07-01/ClassifyProblemClassifications.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [classifyServicesClassifyServicesSample.ts][classifyservicesclassifyservicessample]                                   | classify the list of right Azure services. x-ms-original-file: 2026-07-01/ClassifyServicesForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [classifyServicesNoSubscriptionClassifyServicesSample.ts][classifyservicesnosubscriptionclassifyservicessample]       | classify the list of right Azure services. x-ms-original-file: 2026-07-01/ClassifyServices.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [communicationsCheckNameAvailabilitySample.ts][communicationschecknameavailabilitysample]                             | check the availability of a resource name. This API should be used to check the uniqueness of the name for adding a new communication to the support ticket. x-ms-original-file: 2026-07-01/CheckNameAvailabilityForSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [communicationsCreateSample.ts][communicationscreatesample]                                                           | adds a new customer communication to an Azure support ticket. x-ms-original-file: 2026-07-01/CreateSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [communicationsGetSample.ts][communicationsgetsample]                                                                 | returns communication details for a support ticket. x-ms-original-file: 2026-07-01/GetCommunicationDetailsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [communicationsListSample.ts][communicationslistsample]                                                               | lists all communications (attachments not included) for a support ticket. <br/></br> You can also filter support ticket communications by _CreatedDate_ or _CommunicationType_ using the $filter parameter. The only type of communication supported today is _Web_. Output will be a paged result with _nextLink_, using which you can retrieve the next set of Communication results. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: 2026-07-01/ListCommunicationsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [communicationsNoSubscriptionCheckNameAvailabilitySample.ts][communicationsnosubscriptionchecknameavailabilitysample] | check the availability of a resource name. This API should be used to check the uniqueness of the name for adding a new communication to the support ticket. x-ms-original-file: 2026-07-01/CheckNameAvailabilityForNoSubscriptionSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [communicationsNoSubscriptionCreateSample.ts][communicationsnosubscriptioncreatesample]                               | adds a new customer communication to an Azure support ticket. x-ms-original-file: 2026-07-01/CreateNoSubscriptionSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [communicationsNoSubscriptionGetSample.ts][communicationsnosubscriptiongetsample]                                     | returns communication details for a support ticket. x-ms-original-file: 2026-07-01/GetCommunicationDetailsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [communicationsNoSubscriptionListSample.ts][communicationsnosubscriptionlistsample]                                   | lists all communications (attachments not included) for a support ticket. <br/></br> You can also filter support ticket communications by _CreatedDate_ or _CommunicationType_ using the $filter parameter. The only type of communication supported today is _Web_. Output will be a paged result with _nextLink_, using which you can retrieve the next set of Communication results. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: 2026-07-01/ListCommunicationsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [fileWorkspacesCreateSample.ts][fileworkspacescreatesample]                                                           | creates a new file workspace for the specified subscription. x-ms-original-file: 2026-07-01/CreateFileWorkspaceForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [fileWorkspacesGetSample.ts][fileworkspacesgetsample]                                                                 | gets details for a specific file workspace in an Azure subscription. x-ms-original-file: 2026-07-01/GetFileWorkspaceDetailsForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [fileWorkspacesNoSubscriptionCreateSample.ts][fileworkspacesnosubscriptioncreatesample]                               | creates a new file workspace. x-ms-original-file: 2026-07-01/CreateFileWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [fileWorkspacesNoSubscriptionGetSample.ts][fileworkspacesnosubscriptiongetsample]                                     | gets details for a specific file workspace. x-ms-original-file: 2026-07-01/GetFileWorkspaceDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [filesCreateSample.ts][filescreatesample]                                                                             | creates a new file under a workspace for the specified subscription. x-ms-original-file: 2026-07-01/CreateFileForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [filesGetSample.ts][filesgetsample]                                                                                   | returns details of a specific file in a work space. x-ms-original-file: 2026-07-01/GetFileDetailsForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [filesListSample.ts][fileslistsample]                                                                                 | lists all the Files information under a workspace for an Azure subscription. x-ms-original-file: 2026-07-01/ListFilesForSubscriptionUnderFileWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [filesNoSubscriptionCreateSample.ts][filesnosubscriptioncreatesample]                                                 | creates a new file under a workspace. x-ms-original-file: 2026-07-01/CreateFile.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [filesNoSubscriptionGetSample.ts][filesnosubscriptiongetsample]                                                       | returns details of a specific file in a work space. x-ms-original-file: 2026-07-01/GetFileDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [filesNoSubscriptionListSample.ts][filesnosubscriptionlistsample]                                                     | lists all the Files information under a workspace for an Azure subscription. x-ms-original-file: 2026-07-01/ListFilesUnderFileWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [filesNoSubscriptionUploadSample.ts][filesnosubscriptionuploadsample]                                                 | this API allows you to upload content to a file x-ms-original-file: 2026-07-01/UploadFile.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [filesUploadSample.ts][filesuploadsample]                                                                             | this API allows you to upload content to a file x-ms-original-file: 2026-07-01/UploadFileForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [operationsListSample.ts][operationslistsample]                                                                       | list the operations for the provider x-ms-original-file: 2026-07-01/ListOperations.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [problemClassificationsGetSample.ts][problemclassificationsgetsample]                                                 | get problem classification details for a specific Azure service. x-ms-original-file: 2026-07-01/GetProblemClassification.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [problemClassificationsListSample.ts][problemclassificationslistsample]                                               | lists all the problem classifications (categories) available for a specific Azure service. Always use the service and problem classifications obtained programmatically. This practice ensures that you always have the most recent set of service and problem classification Ids. x-ms-original-file: 2026-07-01/ListProblemClassifications.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [servicesGetSample.ts][servicesgetsample]                                                                             | gets a specific Azure service for support ticket creation. x-ms-original-file: 2026-07-01/GetService.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [servicesListSample.ts][serviceslistsample]                                                                           | lists all the Azure services available for support ticket creation. For **Technical** issues, select the Service Id that maps to the Azure service/product as displayed in the **Services** drop-down list on the Azure portal's [New support request](https://portal.azure.com/#blade/Microsoft_Azure_Support/HelpAndSupportBlade/overview) page. Always use the service and its corresponding problem classification(s) obtained programmatically for support ticket creation. This practice ensures that you always have the most recent set of service and problem classification Ids. x-ms-original-file: 2026-07-01/ListServices.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [supportTicketsCheckNameAvailabilitySample.ts][supportticketschecknameavailabilitysample]                             | check the availability of a resource name. This API should be used to check the uniqueness of the name for support ticket creation for the selected subscription. x-ms-original-file: 2026-07-01/CheckNameAvailabilityWithSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [supportTicketsCreateSample.ts][supportticketscreatesample]                                                           | creates a new support ticket for Subscription and Service limits (Quota), Technical, Billing, and Subscription Management issues for the specified subscription. Learn the [prerequisites](https://aka.ms/supportAPI) required to create a support ticket.<br/><br/>Always call the Services and ProblemClassifications API to get the most recent set of services and problem categories required for support ticket creation.<br/><br/>Adding attachments is not currently supported via the API. To add a file to an existing support ticket, visit the [Manage support ticket](https://portal.azure.com/#blade/Microsoft_Azure_Support/HelpAndSupportBlade/managesupportrequest) page in the Azure portal, select the support ticket, and use the file upload control to add a new file.<br/><br/>Providing consent to share diagnostic information with Azure support is currently not supported via the API. The Azure support engineer working on your ticket will reach out to you for consent if your issue requires gathering diagnostic information from your Azure resources.<br/><br/>**Creating a support ticket for on-behalf-of**: Include _x-ms-authorization-auxiliary_ header to provide an auxiliary token as per [documentation](https://docs.microsoft.com/azure/azure-resource-manager/management/authenticate-multi-tenant). The primary token will be from the tenant for whom a support ticket is being raised against the subscription, i.e. Cloud solution provider (CSP) customer tenant. The auxiliary token will be from the Cloud solution provider (CSP) partner tenant. x-ms-original-file: 2026-07-01/CreateBatchQuotaTicketForSpecificBatchAccountForActiveJobs.json |
| [supportTicketsGetSample.ts][supportticketsgetsample]                                                                 | get ticket details for an Azure subscription. Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: 2026-07-01/GetSubscriptionSupportTicketDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [supportTicketsListSample.ts][supportticketslistsample]                                                               | lists all the support tickets for an Azure subscription. You can also filter the support tickets by _Status_, _CreatedDate_, _ServiceId_, and _ProblemClassificationId_ using the $filter parameter. Output will be a paged result with _nextLink_, using which you can retrieve the next set of support tickets. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: 2026-07-01/ListSupportTicketsBySubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [supportTicketsLookUpResourceIdSample.ts][supportticketslookupresourceidsample]                                       | this operation fetches ARM resource id of support resource type. x-ms-original-file: 2026-07-01/LookUpResourceId.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [supportTicketsNoSubscriptionCheckNameAvailabilitySample.ts][supportticketsnosubscriptionchecknameavailabilitysample] | check the availability of a resource name. This API should be used to check the uniqueness of the name for support ticket creation for the selected subscription. x-ms-original-file: 2026-07-01/CheckNameAvailability.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [supportTicketsNoSubscriptionCreateSample.ts][supportticketsnosubscriptioncreatesample]                               | creates a new support ticket for Billing, and Subscription Management issues. Learn the [prerequisites](https://aka.ms/supportAPI) required to create a support ticket.<br/><br/>Always call the Services and ProblemClassifications API to get the most recent set of services and problem categories required for support ticket creation.<br/><br/>Adding attachments is not currently supported via the API. To add a file to an existing support ticket, visit the [Manage support ticket](https://portal.azure.com/#blade/Microsoft_Azure_Support/HelpAndSupportBlade/managesupportrequest) page in the Azure portal, select the support ticket, and use the file upload control to add a new file.<br/><br/>Providing consent to share diagnostic information with Azure support is currently not supported via the API. The Azure support engineer working on your ticket will reach out to you for consent if your issue requires gathering diagnostic information from your Azure resources.<br/><br/> x-ms-original-file: 2026-07-01/CreateBillingSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [supportTicketsNoSubscriptionGetSample.ts][supportticketsnosubscriptiongetsample]                                     | gets details for a specific support ticket. Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: 2026-07-01/GetSupportTicketDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [supportTicketsNoSubscriptionListSample.ts][supportticketsnosubscriptionlistsample]                                   | lists all the support tickets. <br/><br/>You can also filter the support tickets by <i>Status</i>, <i>CreatedDate</i>, , <i>ServiceId</i>, and <i>ProblemClassificationId</i> using the $filter parameter. Output will be a paged result with <i>nextLink</i>, using which you can retrieve the next set of support tickets. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: 2026-07-01/ListSupportTickets.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [supportTicketsNoSubscriptionUpdateSample.ts][supportticketsnosubscriptionupdatesample]                               | this API allows you to update the severity level, ticket status, and your contact information in the support ticket.<br/><br/>Note: The severity levels cannot be changed if a support ticket is actively being worked upon by an Azure support engineer. In such a case, contact your support engineer to request severity update by adding a new communication using the Communications API. x-ms-original-file: 2026-07-01/UpdateAdvancedDiagnosticConsentOfSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [supportTicketsUpdateSample.ts][supportticketsupdatesample]                                                           | this API allows you to update the severity level, ticket status, advanced diagnostic consent and your contact information in the support ticket.<br/><br/>Note: The severity levels cannot be changed if a support ticket is actively being worked upon by an Azure support engineer. In such a case, contact your support engineer to request severity update by adding a new communication using the Communications API. x-ms-original-file: 2026-07-01/UpdateAdvancedDiagnosticConsentOfSupportTicketForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/chatTranscriptsGetSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/chatTranscriptsGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[chattranscriptsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/chatTranscriptsGetSample.ts
[chattranscriptslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/chatTranscriptsListSample.ts
[chattranscriptsnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/chatTranscriptsNoSubscriptionGetSample.ts
[chattranscriptsnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/chatTranscriptsNoSubscriptionListSample.ts
[classifyproblemsclassifyproblemssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/classifyProblemsClassifyProblemsSample.ts
[classifyproblemsnosubscriptionclassifyproblemssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/classifyProblemsNoSubscriptionClassifyProblemsSample.ts
[classifyservicesclassifyservicessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/classifyServicesClassifyServicesSample.ts
[classifyservicesnosubscriptionclassifyservicessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/classifyServicesNoSubscriptionClassifyServicesSample.ts
[communicationschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/communicationsCheckNameAvailabilitySample.ts
[communicationscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/communicationsCreateSample.ts
[communicationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/communicationsGetSample.ts
[communicationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/communicationsListSample.ts
[communicationsnosubscriptionchecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/communicationsNoSubscriptionCheckNameAvailabilitySample.ts
[communicationsnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/communicationsNoSubscriptionCreateSample.ts
[communicationsnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/communicationsNoSubscriptionGetSample.ts
[communicationsnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/communicationsNoSubscriptionListSample.ts
[fileworkspacescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/fileWorkspacesCreateSample.ts
[fileworkspacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/fileWorkspacesGetSample.ts
[fileworkspacesnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/fileWorkspacesNoSubscriptionCreateSample.ts
[fileworkspacesnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/fileWorkspacesNoSubscriptionGetSample.ts
[filescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/filesCreateSample.ts
[filesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/filesGetSample.ts
[fileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/filesListSample.ts
[filesnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/filesNoSubscriptionCreateSample.ts
[filesnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/filesNoSubscriptionGetSample.ts
[filesnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/filesNoSubscriptionListSample.ts
[filesnosubscriptionuploadsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/filesNoSubscriptionUploadSample.ts
[filesuploadsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/filesUploadSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/operationsListSample.ts
[problemclassificationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/problemClassificationsGetSample.ts
[problemclassificationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/problemClassificationsListSample.ts
[servicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/servicesGetSample.ts
[serviceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/servicesListSample.ts
[supportticketschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsCheckNameAvailabilitySample.ts
[supportticketscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsCreateSample.ts
[supportticketsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsGetSample.ts
[supportticketslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsListSample.ts
[supportticketslookupresourceidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsLookUpResourceIdSample.ts
[supportticketsnosubscriptionchecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsNoSubscriptionCheckNameAvailabilitySample.ts
[supportticketsnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsNoSubscriptionCreateSample.ts
[supportticketsnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsNoSubscriptionGetSample.ts
[supportticketsnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsNoSubscriptionListSample.ts
[supportticketsnosubscriptionupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsNoSubscriptionUpdateSample.ts
[supportticketsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v4/typescript/src/supportTicketsUpdateSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-support
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/support/arm-support/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
